# rakko

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile.rhel9  PLAN.md  README.md  REVIEW.md  config.example.toml  docker-compose.yml
.agents/: PLAN.md
scripts/: build-macos.sh  build-tui-rhel9.sh  consume-test-messages.sh  produce-avro-test-messages.sh  produce-test-messages.sh  send-large-message.sh
src/: app.rs  cli.rs  clipboard.rs  error.rs  events.rs  export.rs  external_editor.rs  main.rs  query_filter.rs  raw_message.rs  ring_buffer.rs  serde_detect.rs  text_field.rs
src/app/: broker_detail.rs  export_import.rs  group_detail.rs  mod.rs  producer.rs  profile_create.rs  tests.rs  topic_detail.rs
src/config/: auth.rs  mod.rs  profile.rs
src/kafka/: admin.rs  client_config.rs  consumer.rs  group_offsets.rs  integration_support.rs  mod.rs  producer.rs  schema_registry.rs
src/ui/: banner.rs  help.rs  mod.rs  splash.rs  theme.rs
src/ui/screens/: broker_detail.rs  broker_list.rs  export_import.rs  group_detail.rs  group_list.rs  mod.rs  producer.rs  profile_picker.rs  topic_detail.rs  topic_list.rs
src/ui/widgets/: confirm_dialog.rs  editor_pane.rs  footer.rs  mod.rs  table_nav.rs  view_switcher.rs
