[package]
name = "rakko"
version = "0.10.1"
edition = "2021"

[dependencies]
rdkafka = { version = "0.39", features = ["cmake-build", "ssl", "ssl-vendored", "zstd", "libz-static", "tokio"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
schema_registry_converter = { version = "4.9", features = ["avro", "easy", "rustls_tls"], default-features = false }
apache-avro = "0.21"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6"
base64 = "0.22"
serde_json = "1"
clap = { version = "4.6", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
image = { version = "0.25.10", default-features = false, features = ["jpeg"] }
